--- a/index.html
+++ b/index.html
@@ -208,10 +208,7 @@
                                 <h1 class="has-text-align-center wp-block-heading">Скоро открытие</h1>
 
 
-                                <p style="text-align:center">Наш уникальный бот-сервис, скоро откроется. С помощью него
-                                    вы сможете посмотреть актуальные новости. Данный бот разрабатывался с целью помочь
-                                    людям с их потребностями в получении новой и интересной информации. Вы можете узнать
-                                    всю информацию на нашем сайте...</p>
+                                <p style="text-align:center">Спешим сообщить, наш уникальный бот-сервис уже почти готов к запуску! С его помощью вы сможете не только экономить время на поиске новостей, но и быть всегда в курсе событий. Подробнее Вы можете ознакомиться на нашем сайте...</p>
 
 
                                 <div class="wp-block-button aligncenter"><a
