--- a/index.html
+++ b/index.html
@@ -61,39 +61,6 @@
           content="Ваше путешествие начинается Ваше путешествие начинается с Эксфорд. Пожалуйста, обязательно изучите все наши предложения и выберите направление, подходящее для вашего следующего отпуска. Изучите наши предложения Откройте для себя весь мир Вас ждут интереснейшие экскурсии и увлекательные приключения. Побалуйте себя и ознакомьтесь с нашими предложениями. Изучите наши предложения Откройте для себя безграничную красоту Познакомьтесь с разными&hellip;"/>
 </head>
 <body class="home page-template-default page page-id-11 logged-in admin-bar no-customize-support wp-embed-responsive customizer-styles-applied singular image-filters-enabled hide-homepage-title jetpack-reblog-enabled highlander-enabled highlander-light has-launch-banner">
-<audio class="audio-for-speech" src=""></audio>
-        <div class="trans_controls__control-wrapper selection">
-                            <span class="trans_controls__toggle icon-trans active" data-store="icon_trans">
-                                <div class="trans_controls__inner-circle"></div>
-                            </span>
-            <span class="trans_controls__description">
-                            Select to translate
-                            </span>
-        </div>
-    </div>
-</div>
-<span class="translate-button-mtz hidden_translate green"></span>
-<div class="launch-banner" id="launch-banner" style="display: none;">
-    <div class="launch-banner-content">
-        <div class="launch-banner-section my-home-button">
-            <a href="https://wordpress.com/setup/build/launchpad?siteSlug=dimdimich1120080.wordpress.com">
-                <svg class="icon icon-home" width="8" height="14" viewBox="0 0 8 14" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M6.5 2L1.5 7L6.5 12" stroke-width="1.5" stroke-linecap="square"></path>
-                </svg>
-            </a>
-        </div>
-    </div>
-    <div class="launch-banner-section dismiss-button">
-        <button>
-            <svg class="icon icon-dismiss" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                 xmlns="http://www.w3.org/2000/svg">
-                <path d="M4.34643 4L15.9997 16M3.99966 16L15.6529 4" stroke-width="1.5"></path>
-            </svg>
-        </button>
-    </div>
-</div>
-</div>
 
 
 <script type="text/javascript">
@@ -208,7 +175,7 @@
                                 <h1 class="has-text-align-center wp-block-heading">Скоро открытие</h1>
 
 
-                                <p style="text-align:center">Спешим сообщить, наш уникальный бот-сервис уже почти готов к запуску! С его помощью вы сможете не только экономить время на поиске новостей, но и быть всегда в курсе событий. Подробнее Вы можете ознакомиться на нашем сайте...</p>
+                                <p style="text-align:center">Спешим сообщить, наш уникальный бот-сервис уже почти готов к запуску! С его помощью вы сможете не только экономить время на поиске новостей, но и быть всегда в курсе событий. Более подробно Вы можете ознакомиться на нашем сайте...</p>
 
 
                                 <div class="wp-block-button aligncenter"><a
