--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                                 <div class="wp-block-button aligncenter"><a
                                         class="wp-block-button__link has-text-color has-foreground-dark-color has-background has-background-background-color"
-                                        href="https://skyt-news.github.io/News-bot/">Посмотреть наш бот-сервис</a></div>
+                                        href="https://skyt-news.github.io/News-bot-web/">Посетить наш сайт!</a></div>
                             </div>
                         </div>
                     </div>
